# src/controllers/user.controller.js
@@ -108,6 +108,15 @@ const otpLogin = (req, res) => {
     });
 };
 
+const register = (req, res) => {
+  processor.verifyMobile(req.body.mobile)
+    .then((e) => sendResult(e, 200, res, req))
+    .catch((e) => {
+      logger.error( JSON.parse(e.message));
+      sendError(e, res, e.statusCode || 500, req);
+    });
+};
+
 module.exports = {
   create,
   authenticate,
@@ -117,4 +126,5 @@ module.exports = {
   id2object,
   search,
   otpLogin,
+  register,
 };
